--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,8 +83,8 @@ jobs:
     # Manual deployment
     # See https://devblogs.microsoft.com/devops/i-need-manual-approvers-for-github-actions-and-i-got-them-now/
     environment:
-      name: pchmn.github.io/vite-react-ts-ghactions-template
-      url: https://pchmn.github.io/vite-react-ts-ghactions-template/
+      name: alex-code-max/vite-react-ts-ghactions
+      url: https://alex-code-max/vite-react-ts-ghactions
     steps:
       # Download dist artifacts
       - uses: actions/download-artifact@v3
