--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React + TypeScript + Vite + Github Actions starter template",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pchmn/vite-react-ts-ghactions-template.git"
+    "url": "https://github.com/Alex-code-max/vite-react-ts-ghactions.git"
   },
   "keywords": [
     "react",
@@ -16,7 +16,7 @@
   ],
   "author": "pchmn",
   "license": "MIT",
-  "homepage": "https://github.com/pchmn/vite-react-ts-ghactions-template",
+  "homepage": "https://github.com/Alex-code-max/vite-react-ts-ghactions",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
