--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,16 +24,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          node-version: 20
 
       - name: 🏗 Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
+          node-version: 20
 
       - name: 🏗 Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
           cache: pnpm
 
       - name: 🗂️ Install dependencies
@@ -48,6 +51,7 @@ jobs:
       # Upload dist artifacts
       - uses: actions/upload-artifact@v3
         with:
+          node-version: 20
           name: dist
           path: dist/
 
